<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="nav_header_desc">Navigation header</string>
  <string name="menu_options">Options</string>
  <string name="menu_my_downloads">My Downloads</string>
  <string name="menu_help">Help</string>
  <string name="exploration_activity_title">Exploration Player</string>
  <string name="play_exploration_button_text">Play exploration</string>
  <string name="help_activity_title">Help</string>
  <string name="bottom_sheet_options_menu_close">Close</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="developer_options">Developer Options</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_unavailable_in_selected_language">%s audio is unavailable.</string>
  <string name="audio_language_select_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
...
  <string name="reset_pin_enter_dialog_message">This PIN will be %s\'s new PIN and will be required when signing in.</string>
  <!-- MyDownloadsActivity -->
  <string name="my_downloads_activity_title">My Downloads</string>
  <string name="tab_downloads">Downloads</string>
  <string name="tab_updates">Updates (2)</string>
  <!-- HomeActivityBackDialog -->
  <string name="home_activity_back_dialog_message">Would you like to exit your profile?</string>
  <string name="home_activity_back_dialog_cancel">Cancel</string>
  <string name="home_activity_back_dialog_exit">Exit</string>
  <!-- HomeActivity -->
  <string name="home_activity_title">Home</string>
  <string name="promoted_story_spotlight_hint">From now, you can see lessons recommended for you here.</string>
  <string name="select_a_topic_to_start">Select a Topic to Start</string>
  <!--  ClassroomListActivity-->
  <string name="classroom_list_activity_title">Home</string>
...
  <string name="back_button">Back Button</string>
  <string name="next">Next</string>
  <!-- ProfileAndDeviceIDsActivity -->
  <string name="learner_analytics_label_text">Learner Study Analytics</string>
  <!-- AdministratorControlsFragment -->
  <string name="administrator_controls_general_label">General</string>
  <string name="administrator_controls_edit_account">Edit account</string>
  <string name="administrator_controls_profile_management_label">Profile Management</string>
  <string name="administrator_controls_edit_profiles">Edit profiles</string>
  <string name="administrator_controls_download_permissions_label">Download Permissions</string>
  <string name="administrator_controls_update_on_wifi_title">Download and update only on Wi-fi</string>
  <string name="administrator_controls_update_on_wifi_message">Topics will be downloaded and updated only on Wi-fi. Any downloads or updates of cellular data will be queued.</string>
  <string name="administrator_controls_auto_update_title">Automatically update topics</string>
...
