<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/home_activity_drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".app.home.HomeActivity">

  <FrameLayout
    android:id="@+id/home_spotlight_fragment_placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/home_activity_app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/component_color_shared_activity_toolbar_color"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:id="@+id/home_fragment_placeholder"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1" />
  </LinearLayout>

  <androidx.fragment.app.FragmentContainerView
    android:id="@+id/home_activity_fragment_navigation_drawer"
    android:name="org.oppia.android.app.drawer.NavigationDrawerFragment"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:minWidth="@dimen/navigation_drawer_width"
    app:layout="@layout/drawer_fragment"
    tools:layout="@layout/drawer_fragment" />
</androidx.drawerlayout.widget.DrawerLayout>
